# microservice-template

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.yml  kong.yaml  repo_setting.sh
.devcontainer/: devcontainer.json
backend/auth/: main.py  pyproject.toml
backend/ms-aggregator-cache/: Dockerfile  main.py  pyproject.toml
backend/ms-aggregator-cache/tests/: conftest.py  test_main.py
backend/ms-image-cache/: Dockerfile  main.py  pyproject.toml
backend/ms-image-cache/tests/: conftest.py  test_main.py
backend/ms-image-retriever/: Dockerfile  config.py  main.py  models.py  pyproject.toml
backend/ms-image-retriever/services/: image_checker.py  minio_service.py
backend/ms-image-retriever/tests/: __init__.py  conftest.py  test_image_checker.py  test_main.py  test_minio_service.py
backend/ms-llm-orchestrator/: Dockerfile  config.py  main.py  models.py  pyproject.toml
backend/ms-llm-orchestrator/services/: llm_client.py  rag_service.py
backend/ms-llm-orchestrator/tests/: __init__.py  conftest.py  test_config.py  test_main.py  test_models.py
backend/ms-maple-drop-repo/: Dockerfile  main.py  models.py  pyproject.toml
backend/ms-maple-drop-repo/services/: existence_checker.py
backend/ms-maple-drop-repo/tests/: __init__.py  conftest.py  test_existence_checker.py  test_main.py  test_models.py
backend/ms-name-resolver/: Dockerfile  main.py  models.py  pyproject.toml
backend/ms-name-resolver/tests/: __init__.py  conftest.py  test_main.py  test_models.py
backend/ms-search-aggregator/: Dockerfile  main.py  models.py  pyproject.toml
backend/ms-search-aggregator/services/: drop_repo_client.py  image_retriever_client.py  name_resolver_client.py  search_orchestrator.py
backend/ms-search-aggregator/tests/: __init__.py  conftest.py  test_clients.py  test_main.py  test_models.py  test_search_orchestrator.py
backend/utils/: __init__.py  auth.py  cache.py  config.py  health.py  pyproject.toml
backend/utils/tests/: test_auth.py
deployment/: kustomization.yaml
deployment/backend/auth/: deployment.yaml  service.yaml
deployment/backend/ms-aggregator-cache/: deployment.yaml  service.yaml
deployment/backend/ms-image-cache/: deployment.yaml  service.yaml
deployment/backend/ms-image-retriever/: deployment.yaml  service.yaml
deployment/backend/ms-llm-orchestrator/: deployment.yaml  service.yaml
deployment/backend/ms-maple-drop-repo/: deployment.yaml  service.yaml
deployment/backend/ms-name-resolver/: deployment.yaml  service.yaml
deployment/backend/ms-search-aggregator/: deployment.yaml  service.yaml
deployment/backend/user/: deployment.yaml  service.yaml
deployment/frontend/: deployment.yaml  ingress.yaml  service.yaml
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.d.ts
frontend/public/: silent-check-sso.html
frontend/src/: keycloak.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/api/: chat.route.test.ts  search_drops.route.test.ts  update_drop.route.test.ts
frontend/src/__tests__/components/: ChatComponent.test.tsx  DevToggle.test.tsx  DropForm.test.tsx  ItemCard.test.tsx  LoginComponent.test.tsx  ResultsComponent.test.tsx  SearchComponent.test.tsx
frontend/src/__tests__/context/: AuthContext.test.tsx  DevContext.test.tsx
frontend/src/__tests__/hooks/: useAutocompleteNames.test.ts  useAutocompleteNames.test.tsx  useClickOutside.test.ts  useSearchData.test.ts
frontend/src/__tests__/integration/: search-flow.test.tsx
frontend/src/__tests__/mocks/: handlers.ts  keycloak.ts  testUtils.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/add_drop/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/search_drops/: route.ts
frontend/src/app/api/update_drop/[id]/: route.ts
frontend/src/app/edit_drop/[id]/: page.tsx
frontend/src/components/: AppContent.tsx  ChatComponent.tsx  DevToggle.tsx  DropForm.tsx  GoBackButton.tsx  ItemCard.tsx  ItemDetail.tsx  ItemImageDisplay.tsx  LoginComponent.tsx  MobImageDisplay.tsx  ResultsComponent.tsx  SearchComponent.tsx
frontend/src/constants/: text.ts
frontend/src/context/: AuthContext.tsx  DevContext.tsx
frontend/src/hooks/: useAutocompleteNames.ts  useClickOutside.ts  useSearchData.ts
