[project]
name = "ms-image-retriever"
version = "0.1.0"
description = "A microservice to retrieve images from a MinIO storage."
dependencies = [
    "fastapi",
    "uvicorn",
    "minio",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.uv]