[project]
name = "ms-llm-orchestrator"
version = "0.1.0"
description = "A FastAPI service for LLM, RAG, and other generative AI tasks."
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pyjwt", # For decoding JWTs
    "pydantic-settings",
    "langchain-openai",
    "langchain-mcp-adapters",
    "langchain",
    "langchain_core",
    "langfuse"
]

[tool.uv]
