[project]
name = "ms-maple-drop-repo"
version = "0.1.0"
description = "get drop item form monster"
dependencies = [
    "fastapi",
    "uvicorn",
    "mysql-connector-python",
    "httpx",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.uv]