[project]
name = "ms-name-resolver"
version = "0.1.0"
description = "A microservice to resolve IDs to names from a MongoDB database."
dependencies = [
    "fastapi",
    "uvicorn",
    "pymongo",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.uv]